/**
 * Copyright (C) 2011-2013 Barchart, Inc. <http://www.barchart.com/>
 *
 * All rights reserved. Licensed under the OSI BSD License.
 *
 * http://www.opensource.org/licenses/bsd-license.php
 */

// Non-java (C, C++, etc) package name space.
package barchart_data;

// Builder options.
option java_package = "com.barchart.proto.buf.data";
option java_outer_classname = "PacketSpec";
option java_multiple_files = true;
option java_generate_equals_and_hash = true;
option optimize_for = SPEED;

// Message descriptor.
import "MessageSpec.proto";

// Packet type for market data.
enum PacketType {
	DATA = 1;
}

// Market data packet with header.
message MarketPacket {

	// Packet channel number.
	// Globally unique in data feed.
	optional sint32 channel = 1;

	// Packet sequence number inside the channel.
	// Globally unique in the channel during the trade day.
	// Positive, reset to 1 every trade day, on local market date change or market open event.
	optional sint64 sequence = 2;

	// Packet send time.
	// Base for message entries, millisFIX, UTC
	optional sint64 timeStamp = 3;

	// Packet body type selector.
	optional PacketType type = 4;

	// Ordered list of messages.
	repeated MarketMessage message = 5;

}

// Market data packet without header, used as codec.
message MarketMessageCodec {

	// Ordered list of messages.
	repeated MarketMessage message = 5;

}
